refactor: modernize collection patterns and fix Flyway baseline
Update test assertions and Flyway configuration (3 files).

Replaces get(0) with getFirst() in test classes to align
with SequencedCollection API conventions.

Fixes Flyway baseline-on-migrate configuration to properly
handle existing databases during initial deployment.